--- a/index.html
+++ b/index.html
@@ -37,25 +37,25 @@
 
         <div class="inputs__bill">
           <h2 class="label">Bill</h2>
-          <input type="number" id="bill" placeholder="0" min="0">
+          <input type="number" id="bill" placeholder="0" min="1">
         </div>
 
         <div class="inputs__tips">
           <h2 class="label">Select Tip %</h2>
           <div class="tips-wrapper">
-            <button class="btn tip-value" value="5">5%</button>
-            <button class="btn tip-value" value="10">10%</button>
-            <button class="btn tip-value" value="15">15%</button>
-            <button class="btn tip-value" value="25">25%</button>
-            <button class="btn tip-value" value="50">50%</button>
-            <input type="number" id="custom" placeholder="Custom" min="0">
+            <button class="btn tip-value" value=".05">5%</button>
+            <button class="btn tip-value" value=".1">10%</button>
+            <button class="btn tip-value" value=".15">15%</button>
+            <button class="btn tip-value" value=".25">25%</button>
+            <button class="btn tip-value" value=".5">50%</button>
+            <input type="number" id="custom" placeholder="Custom" min="1">
           </div>
         </div>
 
         <div class="inputs__nofp">
           <h2 class="label">Number of People</h2>
           <span class="error">Can't be zero</span>
-          <input type="number" id="nofp" placeholder="0" min="0">
+          <input type="number" id="nofp" placeholder="0" min="1">
         </div>
       </div>
 
