--- a/index.html
+++ b/index.html
@@ -16,16 +16,6 @@
   <script src="dist/js/app.js" defer></script>
 
   <title>Tip calculator app</title>
-  <style>
-    .attribution {
-      font-size: 11px;
-      text-align: center;
-    }
-
-    .attribution a {
-      color: hsl(228, 45%, 44%);
-    }
-  </style>
 </head>
 
 <body>
@@ -83,6 +73,10 @@
           <button class="btn btn--reset is-disable">reset</button>
         </div>
       </div>
+    </div>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io/" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="https://github.com/claudioalvesmachado" target="_blank">Cláudio Alves</a>.
     </div>
   </main>
 </body>
